--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>BoatUs quiz cheater by bradvogel</title>
+    <title>Boatus.org completer</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,22 +17,9 @@
   <body>
 
       <header>
-        <h1>BoatUs quiz cheater</h1>
-        <p>Boatus.org certification quiz cheater</p>
+        <h1>Boatus.org online course completer</h1>
+        <p></p>
       </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/bradvogel/boatusquizcheater" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/bradvogel/boatusquizcheater/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/bradvogel/boatusquizcheater/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
 
     <div class="wrapper">
       <nav>
@@ -40,7 +27,7 @@
       </nav>
       <section>
         <h2>
-<a name="boatusorg-cheater" class="anchor" href="#boatusorg-cheater"><span class="octicon octicon-link"></span></a>Boatus.org cheater</h2>
+<a name="boatusorg-cheater" class="anchor" href="#boatusorg-cheater"><span class="octicon octicon-link"></span></a></h2>
 
 <p>Need help on a boatus.org certification? This will put a big green 'NEXT' button in the top right of the page that will both defeat the button timer as well as automatically answer the quiz question.</p>
 
@@ -61,12 +48,8 @@
 
 <p>MIT Licensed. Feel free to <a href="https://github.com/bradvogel/boatusquizcheater/issues/new">file issues</a> if you have trouble.</p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/bradvogel">bradvogel</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
