--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Boatus.org online course completer</h1>
+        <h1>Boatus.org online course helper</h1>
         <p></p>
       </header>
 
@@ -29,7 +29,7 @@
         <h2>
 <a name="boatusorg-cheater" class="anchor" href="#boatusorg-cheater"><span class="octicon octicon-link"></span></a></h2>
 
-<p>Need help on a boatus.org certification? This will put a big green 'NEXT' button in the top right of the page that will both defeat the button timer as well as automatically answer the quiz question.</p>
+<p>Need help on a boatus.org certification? This will put a big green 'NEXT' button in the top right of the page that will automatically move you on to the next question.</p>
 
 <p><img src="https://github.com/bradvogel/boatusquizcheater/blob/master/assets/screenshot.png?raw=true" alt="Screenshot of button" title="Screenshot of button"></p>
 
