--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Boatus.org online course helper</h1>
-        <p></p>
+        <p>Why take 3 hours when you can speed-learn in 5 minutes?</p>
       </header>
 
     <div class="wrapper">
