--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Boatus.org online course helper</h1>
-        <p>Why take 3 hours when you can speed-learn in 5 minutes?</p>
+        <p>Don't take 3 hours when you can speed-learn in 20 minutes</p>
       </header>
 
     <div class="wrapper">
@@ -29,7 +29,7 @@
         <h2>
 <a name="boatusorg-cheater" class="anchor" href="#boatusorg-cheater"><span class="octicon octicon-link"></span></a></h2>
 
-<p>Need help on a boatus.org certification? This will put a big green 'NEXT' button in the top right of the page that will automatically move you on to the next question.</p>
+<p>Taking a boatus.org state certification and tired of the page timer slowing down your learning process? This will put a big green 'NEXT' button in the top right of the page that will automatically move you on to the next question.</p>
 
 <p><img src="https://github.com/bradvogel/boatusquizcheater/blob/master/assets/screenshot.png?raw=true" alt="Screenshot of button" title="Screenshot of button"></p>
 
@@ -42,7 +42,7 @@
 <li>Open chrome://extensions/ in Google Chrome browser</li>
 <li>Click the Developer Mode checkbox in the top right</li>
 <li>Drag the <code>boatusquiz.crx</code> file on top of the chrome://extensions/ page. Click Add.</li>
-<li>Go to <a href="https://elearning.boatus.org/">https://elearning.boatus.org/</a> and start the e-learning module. When the elearning.boatus.org/launch/lesson.asp window pops up, it should have a big green button with NEXT in the upper right. Keep clicking the button to move through all the review topics and quiz questions for 100%.</li>
+<li>Go to <a href="https://elearning.boatus.org/">https://elearning.boatus.org/</a> and start the e-learning module. When the elearning.boatus.org/launch/lesson.asp window pops up, it should have a big green button with NEXT in the upper right. Keep clicking the button to move through all the test quickly!</li>
 </ol><h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
