--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </ol><h3>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
 
-<p>MIT Licensed. Feel free to <a href="https://github.com/bradvogel/boatusquizcheater/issues/new">file issues</a> if you have trouble.</p>
+<p>Free and open source. Feel free to <a href="https://github.com/bradvogel/boatusquizcheater/issues/new">file issues</a> if you have trouble.</p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
